@@ -1,5 +1,10 @@
 2005-10-06  Vincent Noel  <vnoel@cox.net>
 
+	* logview.c (logview_create_monitor_widget, monitor_stop): Some leftover cruft.
+	* monitor.c (monitor_callback): Make it static.
+
+2005-10-06  Vincent Noel  <vnoel@cox.net>
+
 	* monitor.c (mon_update_display): Remove.
 	(monitor_callback): Only repaint the window if the updated log is
 	currently displayed.
